--- a/scss/components/navigation.scss
+++ b/scss/components/navigation.scss
@@ -1,3 +1,18 @@
-nav {
-    color: red;
+.top-menu {
+    display: flex;
+    justify-content: space-between;
+    .logo {
+        flex: 1;
+    }
+
+    nav {
+        border: 1px solid red;
+        flex: 3;
+        display: flex;
+        align-items: center;
+        div {
+            border: 1px solid blue;
+            padding: 15px 30px;
+        }
+    }
 }
