--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,5 @@
 @import "components/reset";
+@import "components/body";
 @import "components/header";
 @import "components/navigation";
 @import "components/footer";
