--- a/scss/components/first-section.scss
+++ b/scss/components/first-section.scss
@@ -2,19 +2,19 @@
         margin-top: 170px;
         display: grid;
         grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: repeat(8,120px);
+        grid-template-rows: repeat(8,115px);
         .main-words {
             grid-column-start: 2;
             grid-column-end: 8;
             justify-self: left;
             text-align: center;
-            width: 910px;
+            width: 970px;
             h1 {
-                font-size: 71px;
+                font-size: 67px;
                 color: #FFF;
                 font-family: $bw-black;
                 text-transform: uppercase;
-                line-height: 90px;
+                line-height: 85px;
                 span {
                     font-size: 80px;
                     color: #fffc00;
@@ -23,14 +23,75 @@
             h2 {
                 font-size: 25px;
                 color: #fffc00;
+                font-family: $isidora-semibold;
+                margin-top: 10px;
+                letter-spacing: 2px;
+                line-height: 30px;
             }
             button {
                 font-size: 25px;
                 color: #000;
+                font-family: $isidora-black;
+                text-transform: uppercase;
                 background-color: #fffc00;
+                border: none;
+                border-radius: 5px;
+                padding: 25px;
+                margin-top: 25px;
+                box-shadow: 0 0 10px #fffc00;
+                cursor: pointer;
             }
         }
         .sub-words {
-
+            width: 770px;
+            margin-bottom: 50px;
+            grid-column-start: 4;
+            grid-column-end: 8;
+            grid-row-start: 7;
+            grid-row-end: 7;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-family: $isidora-regular;
+            .local {    
+                color: #fffc00;
+                text-transform: uppercase;
+                letter-spacing: 10px;
+                border-bottom: 1px solid #fffc00;
+                padding-bottom: 10px;
+            }
+            .data {
+                width: 140px;
+                height: 140px;
+                border: 1px solid #fffc00;
+                border-radius: 50%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                span {
+                    color: #FFF;
+                    font-size: 55px;
+                    font-family: $bw-extra-bold;
+                    &:last-child {
+                        font-size: 15px;
+                        text-transform: uppercase;
+                    }
+                }
+            }
+            .endereco {
+                color: #fffc00;
+                
+                span {
+                    display: block;
+                    line-height: 30px;
+                    font-size: 20px;
+                    font-family: $bw-regular;
+                    &:first-child {
+                        text-transform: uppercase;
+                        font-size: 16px;
+                    }
+                }
+            }
         }
     }
