--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,6 +3,7 @@
 @import "vendors/reset";
 
 // components
+@import "components/body-grid";
 @import "components/top-menu";
 @import "components/first-section";
 @import "components/second-section";
