--- a/scss/components/first-section.scss
+++ b/scss/components/first-section.scss
@@ -6,13 +6,16 @@
 }
 
 .main-words {
-    grid-column-start: 2;
-    grid-column-end: 8;
-    justify-self: left;
+    grid-column: 1/8;
+    grid-row: 2/2;
+    align-self: self-end;
+    justify-content: center;
     text-align: center;
     width: 970px;
+    padding: 0 10px 0 10px;
+    box-sizing: border-box;
     h1 {
-        font-size: 67px;
+        font-size: 66px;
         color: #FFF;
         font-family: $bw-black;
         text-transform: uppercase;
@@ -44,55 +47,66 @@
         cursor: pointer;
     }
 }
-.sub-words {
-    width: 770px;
-    margin-bottom: 50px;
-    grid-column-start: 4;
-    grid-column-end: 8;
-    grid-row-start: 7;
-    grid-row-end: 7;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+
+.local {    
+    grid-column: 2/5;
+    grid-row: 4/4;
+    align-self: center;
     font-family: $isidora-regular;
-    .local {    
-        color: #fffc00;
-        text-transform: uppercase;
-        letter-spacing: 10px;
+    color: #fffc00;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    padding-bottom: 10px;
+    text-align: right;
+    span {
+        display: inline-block;
+        letter-spacing: 14px;
+        word-spacing: 14px;
+        line-height: 25px;
         border-bottom: 1px solid #fffc00;
-        padding-bottom: 10px;
+        padding-left: 10px;
     }
-    .data {
-        width: 140px;
-        height: 140px;
-        border: 1px solid #fffc00;
-        border-radius: 50%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        span {
-            color: #FFF;
-            font-size: 55px;
-            font-family: $bw-extra-bold;
-            &:last-child {
-                font-size: 15px;
-                text-transform: uppercase;
-            }
+}
+
+.data {
+    grid-column: 5/5;
+    grid-row: 4/4;
+    align-self: center;
+    justify-content: center;
+    font-family: $isidora-regular;
+    width: 140px;
+    height: 140px;
+    border: 1px solid #fffc00;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    span {
+        color: #FFF;
+        font-size: 55px;
+        font-family: $bw-extra-bold;
+        &:last-child {
+            font-size: 15px;
+            text-transform: uppercase;
         }
     }
-    .endereco {
-        color: #fffc00;
-        
-        span {
-            display: block;
-            line-height: 30px;
-            font-size: 20px;
-            font-family: $bw-regular;
-            &:first-child {
-                text-transform: uppercase;
-                font-size: 16px;
-            }
+}
+
+.endereco {
+    grid-column: 6/9;
+    grid-row: 4/4;
+    align-self: center;
+    font-family: $isidora-regular;
+    color: #fffc00;
+    span {
+        display: block;
+        line-height: 30px;
+        font-size: 20px;
+        font-family: $bw-regular;
+        &:first-child {
+            text-transform: uppercase;
+            font-size: 18px;
         }
     }
 }
