--- a/scss/components/top-menu.scss
+++ b/scss/components/top-menu.scss
@@ -2,7 +2,7 @@
     grid-column: 1/13;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
     .logo {
         width: 140px;
         height: 30px;
