--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,3 +7,4 @@
 @import "components/top-menu";
 @import "components/first-section";
 @import "components/second-section";
+@import "components/third-section";
