--- a/scss/components/first-section.scss
+++ b/scss/components/first-section.scss
@@ -1,11 +1,11 @@
-.image-wrapper {
+.firstSec-image-wrapper {
     z-index: -1;
     position: absolute;
     top: 0;
     right: 0;
 }
 
-.main-words {
+.firstSec-words {
     grid-column: 1/8;
     grid-row: 2/2;
     align-self: self-end;
@@ -48,7 +48,7 @@
     }
 }
 
-.local {    
+.firstSec-local {    
     grid-column: 2/5;
     grid-row: 4/4;
     align-self: center;
@@ -68,7 +68,7 @@
     }
 }
 
-.data {
+.firstSec-date {
     grid-column: 5/5;
     grid-row: 4/4;
     align-self: center;
@@ -93,7 +93,7 @@
     }
 }
 
-.endereco {
+.firstSec-adress {
     grid-column: 6/9;
     grid-row: 4/4;
     align-self: center;
