fouth e fifth section completas

--- a/scss/components/body-grid.scss
+++ b/scss/components/body-grid.scss
@@ -4,6 +4,6 @@ body {
     padding-right: calc(8% - 20px); 
     display: grid;
     grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: 75px 600px 230px 130px 145px 600px 145px 340px 390px auto;
+    grid-template-rows: 75px 600px 230px 130px 145px 600px 145px 340px 390px 800px 200px 800px auto;
     column-gap: 20px;
 }
