--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,3 +8,5 @@
 @import "components/first-section";
 @import "components/second-section";
 @import "components/third-section";
+@import "components/fourth-section";
+@import "components/fifth-section";
