--- a/scss/components/third-section.scss
+++ b/scss/components/third-section.scss
@@ -1,6 +1,6 @@
 .thirdSec-img {
     z-index: -1;
-    grid-column: 6/11;
+    grid-column: 6/10;
     grid-row: 7/11;
     margin-top: 40px;
 }
@@ -14,11 +14,11 @@
     font-size: 40px;
     font-family: $bw-bold;
     text-align: center;
-    line-height: 40px;
     display: block;
     width: 650px;
     margin-left: 30px;
     line-height: 45px;
+    min-width: 760px;
 }
 
 .thirdSec-texts {
@@ -34,6 +34,7 @@
     line-height: 30px;
     word-spacing: 2px;
     padding: 0 5px 0 5px;
+    min-width: 760px;
     span {
         color: #FFFC00;
         font-family: $bw-bold;
