checkpoint dev sexth section

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -10,3 +10,4 @@
 @import "components/third-section";
 @import "components/fourth-section";
 @import "components/fifth-section";
+@import "components/sixth-section";
