--- a/scss/components/third-section.scss
+++ b/scss/components/third-section.scss
@@ -1,5 +1,5 @@
 .thirdSec-img {
-    z-index: -1;
+    z-index: -2; // menos que -1 para o fundo preto nao atropelar a foto do albert
     grid-column: 6/10;
     grid-row: 7/11;
     margin-top: 40px;
