--- a/scss/components/body-grid.scss
+++ b/scss/components/body-grid.scss
@@ -1,8 +1,8 @@
 body {
     background-color: #000;
-    padding: 0 8% 0 8%;
+    // padding: 0 8% 0 8%;
     display: grid;
-    grid-template-columns: repeat(10, 1fr);
+    grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 75px 600px 230px 130px 145px 600px 145px 340px 390px 800px 200px 800px 650px 180px auto;
     column-gap: 20px;
 }
