--- a/scss/components/sixth-section.scss
+++ b/scss/components/sixth-section.scss
@@ -1,18 +1,24 @@
 .sixthSec-img {
-    grid-column: 2/6;
+    grid-column: 3/7;
     grid-row: 13/15;
     align-self: end;
 }
 
 .sixthSec-texts-wrapper {
-    grid-column: 4/11;
+    grid-column: 5/12;
     grid-row: 13/14;
     align-self: end;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 9%;
     h4 {
+        line-height: 60px;
         font-family: $bw-extra-bold;
         font-size: 50px;
         color: #FFF;
         margin-bottom: 50px;
+        display: block;
     }
     span {
         font-size: 23px;
