--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -11,3 +11,4 @@
 @import "components/fourth-section";
 @import "components/fifth-section";
 @import "components/sixth-section";
+@import "components/seventh-section";
