--- a/scss/components/seventh-section.scss
+++ b/scss/components/seventh-section.scss
@@ -89,35 +89,79 @@
     grid-column: 5/9;
     grid-row: 20/20;
     align-self: end;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #424141;
     height: 630px;
+    padding: 45px;
     h5 {
-
+        font-family: $bw-regular;
+        color: #FFFC00;
+        margin-bottom: 40px;
+        font-size: 36px;
     }
     hr {
-
+        width: 100%;
+        color: #505050;
+        border: none;
+        border-bottom: 1px solid #505050;
+        margin-bottom: 45px;
     }
     span {
-
+        font-size: 19px;
+        font-family: $bw-light;margin-bottom: 10px;
+        color: #FFF;
     }
     .valor {
+        width: 60%;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 50px;
         span {
-
-        }
-        &:last-child {
-
+            font-family: $bw-black;
+            color: #FFFC00;
+            font-size: 34px;
+            margin-top: 30px;
+            &:last-child {
+                font-size: 102px;
+                color: #FFF;
+                font-family: $bw-bold;
+                margin-top: 0px;
+            }
         }
     }
     .valor-vista {
+        width: 22%;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 50px;
         span {
-
-        }
-        &:last-child {
-
+            font-family: $bw-black;
+            color: #FFFC00;
+            font-size: 15px;
+            margin-top: 3px;
+            &:last-child {
+                font-size: 27px;
+                color: #FFF;
+                font-family: $bw-bold;
+                margin-top: 0px;
+            }
         }
     }
     button {
-
+        width: 90%;
+        font-size: 25px;
+        color: #000;
+        font-family: $isidora-black;
+        text-transform: uppercase;
+        background-color: #fffc00;
+        border: none;
+        border-radius: 5px;
+        padding: 25px;
+        box-shadow: 0 0 10px #fffc00;
+        cursor: pointer;
+        margin-bottom: 50px;
     }
     .bandeiras {
 
