checkpoint ajustes footer

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,6 @@
 // vendors
-@import "vendors/fonts";
 @import "vendors/reset";
+@import "vendors/fonts";
 
 // components
 @import "components/body-grid";
@@ -12,3 +12,5 @@
 @import "components/fifth-section";
 @import "components/sixth-section";
 @import "components/seventh-section";
+@import "components/eighth-section";
+@import "components/footer";
