--- a/scss/components/footer.scss
+++ b/scss/components/footer.scss
@@ -1,53 +1,130 @@
 .social-wrapper {
-    display: none;
-    grid-column: 2/11;
+    grid-column: 2/12;
     grid-row: 24/24;
-    img {
-
+    display: flex;
+    align-items: center;    
+    justify-content: space-between;
+    border-top: 1px solid #262626;
+    border-bottom: 1px solid #262626;
+    margin: 0 2.5%;
+    .logo {
+        width: 120px;
+        height: auto;
+        svg {
+            width: 100%;
+        }
     }
     div {
+        display: flex   ;
+        align-items: center;
         span {
-
+            color: #FFF;
+            font-family: $isidora-bold;
+            font-size: 12px;
+            text-transform: uppercase;
+            word-spacing: 2px;
+            color: #FFFC00;
+            margin-right: 30px;
         }
-        img {
-
+        svg {
+            margin-right: 30px;
+            &:last-child {
+                margin-right: 0px;
+            }
         }
     }
 }
-.contact-wrapper {
-    display: none;
-    grid-column: 2/11;
+.atendding {
+    margin-left: 9%;
+    grid-column: 2/5;
     grid-row: 25/25;
     color: #FFF;
-    .attending {
-        img {
-
-        }
+    display: flex;
+    align-items: center;
+    margin: 95px 0;
+    img {
+        width: 60px;
+        height: 60px;
+    }
+    div {
+        display: flex;
+        flex-direction: column;
+        position: relative;
         span {
-
+            color: #FFF;
+            font-family: $isidora-regular;
+            font-size: 30px;
+            margin-left: 25px;
+            &:first-child {
+                color: #FFFC00;
+                font-family: $isidora-bold;
+                font-size: 12px;
+                position: absolute;
+                top: -20px;
+            }
+            &:last-child {
+            }
         }
     }
-    .telephone-wrapper {
-        color: #FFF;
-        span {
-    
-        }
+}
+.telephones-wrapper {
+    grid-column: 6/12;
+    grid-row: 25/25;
+    color: #FFF;
+    align-self: center;
+    margin: 95px 0;
+    margin-top: 75px;
+    span {
+        font-family: $isidora-bold;
+        font-size: 15px;
+        color: #262626;
+    }
+    div {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         div {
-            div {
-                span {
-    
+            display: flex;
+            flex-direction: column;
+            &:last-child {
+                margin-right: 0px;
+            }
+            span {
+                font-family: $isidora-bold;
+                font-size: 12px;
+                color: #FFFC00;
+                letter-spacing: 2px;
+                text-transform: uppercase;
+                margin-top: 30px;
+                &:last-child {
+                    font-family: $bw-regular;
+                    font-size: 18px;
+                    color: #FFF;
+                    margin-top: 15px;
+                    text-transform: lowercase;
                 }
             }
         }
     }
 }
 
+
 .infos {
-    display: none;
-    grid-column: 2/11;
+    border-top: 1px solid #262626;
+    grid-column: 2/12;
     grid-row: 26/26;
     color: #FFF;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     span {
-
+        font-family: $bw-regular;
+        font-size: 14px;
+        color: #d1d1d1;
+        &:last-child {
+            font-size: 15px;
+            text-transform: uppercase;
+            color: #262626;
+        }
     }
 }
