--- a/scss/components/body-grid.scss
+++ b/scss/components/body-grid.scss
@@ -5,3 +5,9 @@ body {
     grid-template-rows: 75px 600px 230px 130px 145px 600px 145px 340px 390px 800px 200px 800px 650px 180px 200px 510px 140px 240px 125px 750px 280px 570px 120px 150px 250px 185px auto;
     column-gap: 20px;
 }
+
+@media (max-width: 1520px) {
+    body {
+        grid-template-rows: 75px 600px 230px 130px 145px 600px 145px 340px 390px 800px 200px 800px 650px 180px 200px 800px 140px 240px 125px 750px 280px 570px 120px 150px 250px 185px auto;
+    }
+}
