--- a/scss/components/top-menu.scss
+++ b/scss/components/top-menu.scss
@@ -1,44 +1,51 @@
 .top-menu {
+    grid-row: 1/1;
     grid-column: 2/12;
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    padding-top: 1.302vh;
     .logo {
-        width: 140px;
-        height: 30px;
+        width: 7.292vw;
         svg {
-            width: 100%;
-            height: 100%;
+            width: auto;
+            height: auto;
         }
     }
 
     nav {
-        max-width: 752px;
-        height: 47px;
         display: flex;
         align-items: center;
         justify-content: space-between;
+        width: 38.542vw;
         div {
-            padding: 15px 0px;
-            box-sizing: border-box;
-            margin-right: 80px;
+            margin-right: 4.948vw;
+            display: flex;
+            align-items: center;
             a {
                 text-decoration: none;
                 text-transform: uppercase;
                 color: #FFF;
                 font-family: $bw-bold;
-                letter-spacing: 1px;
+                font-size: 0.729vw;
+                letter-spacing: 0.052vw;
                 cursor: pointer;
+                
             }
             &:last-child {
-                margin-right: 0px;
+                padding: 0.781vh 1.563vw;
+                border: 1px solid #fffc00;
+                border-radius: 0.260vw;
+                margin-right: 0;
                 a {
                     color: #fffc00;
-                    padding: 15px 35px;
-                    border: 1px solid #fffc00;
-                    border-radius: 5px;
                 }
             }
         }
+    }
+}
+
+@media (max-width: 600px) {
+    .top-menu {
+        border: 1px solid red;
     }
 }
