--- a/scss/components/first-section.scss
+++ b/scss/components/first-section.scss
@@ -3,19 +3,19 @@
     grid-row: 1/3;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 4% 15.1% 40.3% 22%;
+    grid-template-rows: repeat(10, 1fr);
     .firstSec-image-wrapper {
         grid-column: 8/13;
-        grid-row: 1/6;
-        z-index: -2;
+        grid-row: 1/12;
         img {
+            z-index: -1;
             height: auto;
         }
     }
     
     .firstSec-titles-wrapper {
         grid-column: 2/8;
-        grid-row: 3/4;
+        grid-row: 3/7;
         text-align: center;
         h1 {
             margin-bottom: 1.042vw;
@@ -53,10 +53,9 @@
             cursor: pointer;
         }
     }
-    
     .firstSec-infos-wrapper {
         grid-column: 4/9;
-        grid-row: 5/6;
+        grid-row: 9/11;
         align-items: center;
         display: flex;
         justify-content: space-between;
